[gd_scene load_steps=4 format=3 uid="uid://dy1kwil5ra28x"]

[ext_resource type="Script" path="res://scr/main/main.gd" id="1_a5v8e"]
[ext_resource type="Script" path="res://scr/main/json_selection.gd" id="2_sd7r7"]
[ext_resource type="Script" path="res://scr/main/npc_manager.gd" id="3_uwa3o"]

[node name="Main" type="Node2D"]
script = ExtResource("1_a5v8e")

[node name="Background" type="ColorRect" parent="."]
offset_right = 960.0
offset_bottom = 540.0
color = Color(0.117647, 0.0980392, 0.203922, 0.835294)
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 12.0
offset_bottom = 532.0

[node name="ColorRect2" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 948.0
offset_top = 8.0
offset_right = 952.0
offset_bottom = 532.0

[node name="ColorRect3" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 952.0
offset_bottom = 12.0

[node name="ColorRect4" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 528.0
offset_right = 952.0
offset_bottom = 532.0

[node name="JsonSelection" type="Node2D" parent="."]
script = ExtResource("2_sd7r7")

[node name="Button" type="Button" parent="JsonSelection"]
offset_left = 25.0
offset_top = 32.0
offset_right = 111.0
offset_bottom = 63.0
text = "Load Save"

[node name="Control" type="Control" parent="JsonSelection"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="FileDialog" type="FileDialog" parent="JsonSelection/Control"]
title = "Open a File"
position = Vector2i(50, 43)
size = Vector2i(500, 300)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*json")

[node name="NpcManager" type="Node2D" parent="."]
script = ExtResource("3_uwa3o")

[node name="Container" type="VBoxContainer" parent="NpcManager"]
offset_left = 44.0
offset_top = 80.0
offset_right = 90.0
offset_bottom = 120.0

[node name="Label" type="Label" parent="NpcManager/Container"]
layout_mode = 2
text = "NPCS:"

[node name="NpcContainer" type="VBoxContainer" parent="NpcManager/Container"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="NpcManager"]
offset_left = 124.0
offset_top = 20.0
offset_right = 128.0
offset_bottom = 544.0

[connection signal="pressed" from="JsonSelection/Button" to="JsonSelection" method="_on_button_pressed"]
[connection signal="file_selected" from="JsonSelection/Control/FileDialog" to="JsonSelection" method="_on_file_dialog_file_selected"]
